# sgl_dummy_backend

./: .gitignore  README.md  pyproject.toml
dummy_srt_platform_plugin.egg-info/: PKG-INFO  SOURCES.txt
src/dummy_srt_platform_plugin/: __init__.py  cost_model.py  device.py  dummy_native_backend.py  fake_attention.py  fake_decode_graph.py  fake_embedding.py  fake_forward.py  fake_graph_pool.py  fake_load.py  fake_memory.py  fake_pynccl.py  fake_quant.py  fake_rotary.py  fake_triton_support.py  fake_unified_attention.py  gpu_spec.py  piecewise_backend.py  srt_platform.py
src/dummy_srt_platform_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: __init__.py  test_dummy_platform.py  test_generate.py  test_integration.py  test_prefil_decode_2.py
